--- a/css/Startside.css
+++ b/css/Startside.css
@@ -23,13 +23,13 @@ body{
         }
 
 
-
-        @keyframes moonBob {
-            0% {top: 0;}
-            50%{ top: 1%;}
-            100% {top: 0;}
-        }
-
+        /*Sky Animations*/
+        /*-------------------------------------------*/
+            @keyframes moonBob {
+                0% {top: 0;}
+                50%{ top: 1%;}
+                100% {top: 0;}
+            }
         /*-------------------------------------------*/
     /*-------------------------------------------*/
 
