--- a/CSS/Lego-Start.css
+++ b/CSS/Lego-Start.css
@@ -329,12 +329,12 @@ body{
         /*Rel Tree*/
         #relTree1 {
             opacity: 1;
-            animation: getGround 10s forwards linear;
+            animation: quickLift 2s 15s forwards linear;
         }
         
         #relTree2 {
             opacity: 1;
-            animation: three2 1s 1 forwards linear paused;
+            animation: bigLittle 1s 1 forwards linear paused;
         }
         
         #relTree3 {
@@ -349,7 +349,7 @@ body{
         
         #relTree5 {
             opacity: 1;
-            animation: three4 1s 1 forwards linear paused;
+            animation: qiuckLift 1s 1 forwards linear paused;
         
         }
         
@@ -362,12 +362,12 @@ body{
         /*Lego Tree*/
         #legoTree1 {
             opacity: 0;
-            animation: getGround 10s reverse forwards linear;
+            animation: quickLift 2s 15s reverse forwards linear;
         }
         
         #legoTree2 {
             transform: scale(0);
-            animation: three2 1s 1 forwards reverse linear paused;
+            animation: bigLittle 1s 1 forwards reverse linear paused;
         }
         
         #legoTree3 {
@@ -382,7 +382,7 @@ body{
         
         #legoTree5 {
             top: -300%;
-            animation: three4 1s 2s 1 forwards reverse linear paused;
+            animation: qiuckLift 1s 2s 1 forwards reverse linear paused;
         }
         
         #legoTree6 {
@@ -424,7 +424,7 @@ body{
         
         }
 
-        @keyframes three2 {
+        @keyframes bigLittle {
             0% {
                 transform: scale(1);
             }
@@ -438,7 +438,7 @@ body{
             }
         }
 
-        @keyframes three4 {
+        @keyframes qiuckLift {
             0% {
                  top: 0%;
             }
