--- a/css/Lego-Land.css
+++ b/css/Lego-Land.css
@@ -461,3 +461,55 @@ body{
         text-decoration: none;
         font-weight: 800;
     }
+
+/* Justering av snøfnugg tilpasset siden*/    
+/*---------------------------------------------------------------------------------------*/
+    @keyframes snowflake3{
+        0%{left: 16%;
+            top: 0%;
+            transform: scale(0.9);
+            z-index: 1;}
+        50%{opacity: 1;
+            z-index: 0;}    
+        100%{left: 18%;
+            top: 79%;
+            transform:rotate(-190deg);
+            opacity: 0;
+            z-index: -1}
+    }
+
+    @keyframes snowflake4{
+        0%{left: 20%;
+            top: 0%;
+            transform: scale(1.1);
+            z-index: 5;}
+        90%{opacity: 1;}    
+        100%{left: 20%;
+            top: 74%;
+            transform:rotate(170deg);
+            opacity: 0;
+            z-index: 5;}
+    }
+
+    @keyframes snowflake9{
+        0%{left: 43%;
+            top: 0%;
+            z-index: 5;}
+        90%{opacity: 1;}    
+        100%{left: 45%;
+            top: 52%;
+            transform:rotate(-180deg);
+            opacity: 0;
+            z-index: 5;}
+    }
+
+    @keyframes snowflake10{
+        0%{left: 51%;
+            top: 0%;
+            transform: scale(0.8)}
+        90%{opacity: 1;}    
+        100%{left: 51%;
+            top: 52%;
+            transform:rotate(-80deg);
+            opacity: 0;}
+    }
